--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -1,12 +1,11 @@
 log4j.rootLogger=debug, A1
 
-
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 
 # Print the date in ISO 8601 format
 log4j.appender.A1.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
-log4j.logger.org.hibernate=info
-log4j.logger.net.sf.hibernate=info
-log4j.logger.org.jboss=info
+log4j.logger.org.hibernate=fatal
+log4j.logger.net.sf.hibernate=fatal
+log4j.logger.org.jboss=fatal
